--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.3",
+    "sonner": "^2.0.5",
     "zod": "^3.25.63"
   },
   "devDependencies": {
