--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -17,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "zod": "^3.25.63"
