--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
@@ -22,6 +26,7 @@
     "react-leaflet": "^5.0.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.63"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4"
   }
 }
